WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159068
[iOS] A WebPageProxy in closed state should not be allowed to hold a process assertion
https://bugs.webkit.org/show_bug.cgi?id=159068
Summary
[iOS] A WebPageProxy in closed state should not be allowed to hold a process ...
Chris Dumez
Reported
2016-06-23 12:22:49 PDT
A WebPageProxy in closed state should not be allowed to hold a process assertion. It currently happens that WebPageProxy::close() gets called but that the WebPageProxy is kept alive by Safari (e.g. In case of top-hit preloading). In such cases, we fail to release the foreground process assertion that the WebPageProxy holds. We should clear the foreground process assertion that the WebPageProxy holds as soon as WebPageProxy::close() is called.
Attachments
Patch
(1.93 KB, patch)
2016-06-23 12:26 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-06-23 12:23:22 PDT
rdar://problem/17665473
Chris Dumez
Comment 2
2016-06-23 12:26:53 PDT
Created
attachment 281928
[details]
Patch
Tim Horton
Comment 3
2016-06-23 12:52:51 PDT
Comment on
attachment 281928
[details]
Patch It doesn't make sense for Safari to keep the view alive if it has been closed; you can't come back from being closed, as far as I remember. Are you sure that is intentional?
Chris Dumez
Comment 4
2016-06-23 12:56:16 PDT
(In reply to
comment #3
)
> Comment on
attachment 281928
[details]
> Patch > > It doesn't make sense for Safari to keep the view alive if it has been > closed; you can't come back from being closed, as far as I remember. Are you > sure that is intentional?
It may not be intentional, I'll investigate separately. I definitely see close() getting called but not the destructor. Do you mind if we still land as is though? It cannot hurt to release the assertion as soon as close() is called I believe.
Chris Dumez
Comment 5
2016-06-23 12:59:09 PDT
Comment on
attachment 281928
[details]
Patch Clearing flags on attachment: 281928 Committed
r202393
: <
http://trac.webkit.org/changeset/202393
>
Chris Dumez
Comment 6
2016-06-23 12:59:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug