[iOS] A WebPageProxy in closed state should not be allowed to hold a process assertion https://bugs.webkit.org/show_bug.cgi?id=159068 <rdar://problem/17665473>

Reviewed by Tim Horton.

A WebPageProxy in closed state should not be allowed to hold a process assertion. It
currently happens that WebPageProxy::close() gets called but that the WebPageProxy is
kept alive by Safari (e.g. In case of top-hit preloading). In such cases, we fail to
release the foreground process assertion that the WebPageProxy holds.

We should clear the foreground process assertion that the WebPageProxy holds as soon
as WebPageProxy::close() is called.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close):

Canonical link: https://commits.webkit.org/177154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202393 268f45cc-cd09-0410-ab3c-d52691b4dbfc